--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "engines": { "node": ">=0.4.0" },
     "author": "Yaron Naveh (yaronn01@gmail.com, http://webservices20.blogspot.com/)",
     "dependencies": {
-        "xmldom-fork-fixed": ">=0.0.1",
-        "xmldom": "=0.1.16",
+        "xmldom": "git://github.com/winsome/xmldom.git",
         "xpath.js": ">=0.0.3"
      },
      "devDependencies": {
